--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @font-face {
-    font-family: 'Roboto', sans-serif;
-    src: url(fonts/Dosis-VariableFont_wght.ttf) format ('woff')}
+    font-family: 'Open Sans', sans-serif;
+    src:url(./assets/fonts/OpenSans-VariableFont_wdth\,wght.ttf)
+}
 
 *{
     box-sizing: border-box;
@@ -8,9 +9,228 @@
     padding: 0px;
     list-style: none;
     text-decoration: none;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 body, html {
     height: 100%;
+}
+
+.container{
+    width: 94%;
+    margin: auto;
+}
+
+header{
+    background-color: #717171;
+    overflow: hidden;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+    position: sticky;
+    overflow: hidden;
+    background-color: white;
+    z-index: 1;
+    top: 0;
+}
+
+header nav {
+    display: none;
+}
+
+nav ul li a{
+    color: #212121;
+    transition: color 0.2s ease-in-out;
+}
+
+nav ul li {
+    padding: 12px 8px;
+}
+
+nav ul li a:hover{
+    color: orangered;
+    text-shadow:.3px .3px orangered;
+}
+
+.sign{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.sign button {
+    border: none;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
+
+.sign a {
+    display: none;
+    color: #212121;
+    padding: 12px 8px;
+    transition: color 0.2s ease-in-out;
+}
+
+.sign a:hover {
+    color: orangered;
+    text-shadow:.3px .3px orangered;
+}
+
+.nav-mobile{
+    position: absolute;
+    text-align: center;
+    background-color: rgb(226, 224, 224);
+    opacity: 0.9;
+    color: #212121;
+    right: 0;
+    bottom: 0;
+    top: 45px;
+    width: 97%;
+    padding: 10px;
+    z-index: 99;
+}
+
+.nav-mobile ul li a:hover{
+    color: orangered;
+}
+
+.nav-mobile.d-none{
+    display: none;
+}
+
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("./assets/images/hero.jpg");
+    height: 220px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.hero-text h1{
+    font-size: 34px;
+    margin-bottom: 10px;
+    color: orange;
+}
+
+.hero-text span{
+    font-style: italic;
+}
+
+.banner{
+    padding-top: 50px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.banner .banner-main{
+    display: flex;
+    align-items: center;
+    flex-direction: column-reverse;
+}
+
+.banner .banner-right h2 {
+    font-style: bold;
+    background-color: orange;
+}
+
+.banner .banner-right p {
+    margin-top: 10px;
+}
+
+.banner .banner-right span {
+    color: orangered;
+    font-weight: 600;
+}
+
+.banner .banner-left img {
+    width: 280px;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner .banner-right {
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+
+
+
+
+
+footer{
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    color: #212121;
+    font-size: 13px;
+    align-items: center;
+    padding-bottom: 10px;
+    padding-top: 20px;
+    overflow: hidden;
+    background-color: white;
+}
+
+footer ul li a{
+    color: #212121;
+}
+
+@media only screen and (min-width: 768px) {
+    .sign a {
+        display: block;
+    }
+
+    .banner .banner-main{
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 50px;
+    }
+    .banner .banner-left img {
+        width: 300px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .banner .banner-right {
+        text-align: left;
+        margin: auto;
+        max-width: 500px;
+    }
+
+    .banner .banner-right h2 {
+        font-size: 34px;
+    }
+    .banner .banner-right p {
+        margin-top: 10px;
+        font-size: 16px;
+    }
+
+    #hamburger{
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    header nav {
+        display: block;
+    }
+
+    header nav ul {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 }
