--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: 'Open Sans', sans-serif;
-    src:url(./assets/fonts/OpenSans-VariableFont_wdth\,wght.ttf)
-}
+    src:url(./assets/fonts/OpenSans-VariableFont_wdth\,wght.ttf)}
 
 *{
     box-sizing: border-box;
@@ -9,17 +8,14 @@
     padding: 0px;
     list-style: none;
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
-}
+    font-family: 'Open Sans', sans-serif;}
 
 body, html {
-    height: 100%;
-}
+    height: 100%;}
 
 .container{
     width: 94%;
-    margin: auto;
-}
+    margin: auto;}
 
 header{
     background-color: #717171;
@@ -32,51 +28,42 @@ header{
     overflow: hidden;
     background-color: white;
     z-index: 1;
-    top: 0;
-}
+    top: 0;}
 
 header nav {
-    display: none;
-}
+    display: none;}
 
 nav ul li a{
     color: #212121;
-    transition: color 0.2s ease-in-out;
-}
+    transition: color 0.2s ease-in-out;}
 
 nav ul li {
-    padding: 12px 8px;
-}
+    padding: 12px 8px;}
 
 nav ul li a:hover{
     color: orangered;
-    text-shadow:.3px .3px orangered;
-}
+    text-shadow:.3px .3px orangered;}
 
 .sign{
     display: flex;
     align-items: center;
-    gap: 10px;
-}
+    gap: 10px;}
 
 .sign button {
     border: none;
     background-color: white;
     display: flex;
-    align-items: center;
-}
+    align-items: center;}
 
 .sign a {
     display: none;
     color: #212121;
     padding: 12px 8px;
-    transition: color 0.2s ease-in-out;
-}
+    transition: color 0.2s ease-in-out;}
 
 .sign a:hover {
     color: orangered;
-    text-shadow:.3px .3px orangered;
-}
+    text-shadow:.3px .3px orangered;}
 
 .nav-mobile{
     position: absolute;
@@ -89,16 +76,13 @@ nav ul li a:hover{
     top: 45px;
     width: 97%;
     padding: 10px;
-    z-index: 99;
-}
+    z-index: 99;}
 
 .nav-mobile ul li a:hover{
-    color: orangered;
-}
+    color: orangered;}
 
 .nav-mobile.d-none{
-    display: none;
-}
+    display: none;}
 
 .hero-image {
     background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("./assets/images/hero.jpg");
@@ -107,7 +91,7 @@ nav ul li a:hover{
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-}
+    margin-bottom: 10px;}
 
 .hero-text {
     text-align: center;
@@ -115,59 +99,118 @@ nav ul li a:hover{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: white;
-}
+    color: white;}
 
 .hero-text h1{
-    font-size: 34px;
+    font-size: 40px;
     margin-bottom: 10px;
-    color: orange;
-}
+    color: orange;}
 
 .hero-text span{
-    font-style: italic;
-}
+    font-style: italic;}
 
 .banner{
-    padding-top: 50px;
+    padding-top: 30px;
     display: flex;
     justify-content: space-evenly;
-}
+    padding-bottom: 20px;}
 
 .banner .banner-main{
     display: flex;
     align-items: center;
-    flex-direction: column-reverse;
-}
+    flex-direction: column-reverse;}
 
 .banner .banner-right h2 {
     font-style: bold;
-    background-color: orange;
-}
+    background-color: orange;}
 
 .banner .banner-right p {
-    margin-top: 10px;
-}
+    margin-top: 10px;}
 
 .banner .banner-right span {
     color: orangered;
-    font-weight: 600;
-}
+    font-weight: 600;}
 
 .banner .banner-left img {
-    width: 280px;
+    width: 200px;
     align-items: center;
-    justify-content: center;
-}
+    justify-content: center;}
 
 .banner .banner-right {
     text-align: center;
     margin-top: 40px;
-    margin-bottom: 20px;
-}
+    margin-bottom: 20px;}
+/*=========================================================================================================================================================*/
 
+.slideshow-container img {
+    height: auto;
+    vertical-align: middle;}
 
+.slideshow-container {
 
+    position: relative;
+    margin: auto;}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);}
+
+.slideshow-container .text {
+    color: #f2f2f2;
+    background-color: rgba(71, 71, 71, 0.5);
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;}
+
+.slideshow-container .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;}
+
+.active, .dot:hover {
+    background-color: #717171;}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;}
+
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}}
+
+/*=========================================================================================================================================================*/
 
 
 
@@ -181,56 +224,48 @@ footer{
     padding-bottom: 10px;
     padding-top: 20px;
     overflow: hidden;
-    background-color: white;
-}
+    background-color: white;}
 
 footer ul li a{
-    color: #212121;
-}
+    color: orangered;
+    transition: color 0.2s ease-in-out;}
+
+footer ul li a:hover{
+    color: orangered;
+    text-shadow:.2px .2px orangered;}
 
 @media only screen and (min-width: 768px) {
     .sign a {
-        display: block;
-    }
+        display: block;}
 
     .banner .banner-main{
         display: flex;
         flex-direction: row-reverse;
-        gap: 50px;
-    }
+        gap: 50px;}
     .banner .banner-left img {
-        width: 300px;
+        width: 200px;
         align-items: center;
-        justify-content: center;
-    }
+        justify-content: center;}
 
     .banner .banner-right {
         text-align: left;
         margin: auto;
-        max-width: 500px;
-    }
+        max-width: 500px;}
 
     .banner .banner-right h2 {
-        font-size: 34px;
-    }
+        font-size: 34px;}
     .banner .banner-right p {
         margin-top: 10px;
-        font-size: 16px;
-    }
+        font-size: 16px;}
 
     #hamburger{
-        display: none;
-    }
-}
+        display: none;}}
 
 @media only screen and (min-width: 1024px) {
     header nav {
-        display: block;
-    }
+        display: block;}
 
     header nav ul {
         display: flex;
         align-items: center;
-        gap: 10px;
-    }
-}
+        gap: 10px;}}
